translate geeks pro

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,13 +3,13 @@
     "header.about_us": "О нас",
     "content.advantages.text_h1": "Преимущества",
     "content.courses.text_h1": "Курсы",
+    "sign_up": "ЗАПИСАТЬСЯ",
     "header": {
-        "GEEKS": "GEEKS",
-        "Courses": "Курсы",
-        "GEEKS JUNIOR": "GEEKS JUNIOR",
-        "GEEKS PRO": "GEEKS PRO",
-        "About Us": "О нас",
-        "Advantages": "ПРЕИМУЩЕСТВА"
+        "text_1": "Курсы",
+        "text_2": "GEEKS JUNIOR",
+        "text_3": "GEEKS PRO",
+        "text_4": "О нас",
+        "text_5": "ПРЕИМУЩЕСТВА"
     },
     "courses": {
         "cours_block_title": "САМЫЕ ВОСТРЕБОВАННЫЕ IT- КУРСЫ",
@@ -88,5 +88,40 @@
         "description": "Стань iOS-разработчиком с нуля за 7 месяцев и получи доступ к стажировке + помощь в трудоустройстве!",
         "duration": "Длительность: 7 месяцев",
         "buttom": "Подробнее"
-    }
+    },
+    "geeks_pro_1": {
+        "first_p": "КТО МОЖЕТ СТАЖИРОВАТЬСЯ В GEEKS PRO?",
+        "second_p": "Geeks Pro предоставляет возможность стажировки как для выпускников Geeks, так и других образовательных центров, курсов и ВУЗов."
+    },
+    "geeks_pro_2": {
+        "first_p": "КАК ПОПАСТЬ К НАМ?",
+        "second_p": "Для поступления на стажировочную программу вам нужно пройти отборочное тестирование. Пожалуйста, заполните форму и оставьте заявку."
+    },
+    "geeks_pro_3": {
+        "first_p": "ЧТО ТАКОЕ ЦЕНТР КАРЬЕРЫ GEEKS PRO?",
+        "second_p": "Центр карьеры Geeks Pro предоставляет выпускникам Geeks и других учебных заведений возможность пройти стажировочную программу по повышению квалификации. В программе командная работа над коммерческими проектами, мастер-классы по soft и hard навыкам, помощь в трудоустройстве и многое другое."
+    },
+    "geeks_companies_text": "наши партнеры",
+    "quest_title": "ПОЧЕМУ GEEKS PRO?",
+    "table": {
+        "table_text_1": "ТРЕНИНГИ И МАСТЕР-КЛАССЫ",
+        "table_text_2": "ПОВЫШЕНИЕ КВАЛИФИКАЦИИ",
+        "table_text_3": "РАБОТА В КОМАНДЕ",
+        "table_text_4": "ВОЗМОЖНОСТЬ ТРУДОУСТРОЙСТВА",
+        "table_text_5": "ВОЗМОЖНОСТЬ РАБОТЫ ОНЛАЙН",
+        "table_text_6": "РАБОТА НАД РЕАЛЬНЫМИ ПРОЕКТАМИ",
+        "table_text_7": "ЗАКРЕПЛЕНИЕ ХАРД СКИЛЛОВ"
+    },
+    "geeks_pro_title": "ИЗУЧАЙТЕ IT И СТАНЬТЕ ЭКСПЕРТОМ В СВОЕЙ ОБЛАСТИ",
+    "geeks_pro_post_title": "В БАНКЕ",
+    "geeks_pro_post_title_num": "РЕЗЮМЕ",
+    "geeks_pro_btn": "ВОЙТИ В БАНК РЕЗЮМЕ",
+    "geeks_pro_text_post_number_1": "трудоустроенных студентов",
+    "geeks_pro_text_post_number_2": "выпускников проходят стажировку",
+    "geeks_pro_text_post_number_3": "выпускников закончили стажировку",
+    "geeks_pro_text_post_number_4": "компаний заключили с нами партнерское соглашение",
+    "geeks_pro_modal_title": "банк резюме",
+    "login": "Логин",
+    "password": "Пароль",
+    "enter": "войти"
 }
