--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,13 +3,13 @@
     "header.about_us": "About us",
     "content.advantages.text_h1": "Advantages",
     "content.courses.text_h1": "Courses",
+    "sign_up": "SING UP",
     "header": {
-        "GEEKS": "GEEKS",
-        "Courses": "Courses",
-        "GEEKS JUNIOR": "GEEKS JUNIOR",
-        "GEEKS PRO": "GEEKS PRO",
-        "About Us": "About Us",
-        "Advantages": "Advantages"
+        "text_1": "Courses",
+        "text_2": "GEEKS JUNIOR",
+        "text_3": "GEEKS PRO",
+        "text_4": "About Us",
+        "text_5": "Advantages"
     },
     "courses": {
         "cours_block_title": "THE MOST POPULAR IT COURSES",
@@ -88,5 +88,40 @@
         "description": "Become an iOS developer from scratch in 7 months and get access to an internship + employment assistance!",
         "duration": "Duration: 7 months",
         "buttom": "More details"
-    }
+    },
+    "geeks_pro_1": {
+        "first_p": "WHO CAN TRAIN AT GEEKS PRO?",
+        "second_p": "Geeks Pro provides internship opportunities for both Geeks graduates and other educational centers, courses and universities."
+    },
+    "geeks_pro_2": {
+        "first_p": "HOW DO I GET TO US?",
+        "second_p": "To enroll in the internship program, you need to pass a qualifying test. Please fill out the form and leave a request."
+    },
+    "geeks_pro_3": {
+        "first_p": "WHAT IS THE GEEKS PRO CAREER CENTER?",
+        "second_p": "The Geeks Pro Career Center provides graduates of Geeks and other educational institutions with the opportunity to complete an internship program to improve their skills. The program includes teamwork on commercial projects, workshops on soft and hard skills, employment assistance and much more."
+    },
+    "geeks_companies_text": "our partners",
+    "quest_title": "WHY GEEKS PRO?",
+    "table": {
+        "table_text_1": "TRAININGS AND MASTER CLASSES",
+        "table_text_2": "PROFESSIONAL DEVELOPMENT",
+        "table_text_3": "TEAMWORK",
+        "table_text_4": "EMPLOYMENT OPPORTUNITY",
+        "table_text_5": "ONLINE JOB OPPORTUNITY",
+        "table_text_6": "WORKING ON REAL PROJECTS",
+        "table_text_7": "SECURING HARD SKILLS"
+    },
+    "geeks_pro_title": "STUDY IT AND BECOME AN EXPERT IN YOUR FIELD",
+    "geeks_pro_post_title": "IN THE BANK",
+    "geeks_pro_post_title_num": "RESUME",
+    "geeks_pro_btn": "LOG IN TO THE RESUME BANK",
+    "geeks_pro_text_post_number_1": "employed students",
+    "geeks_pro_text_post_number_2": "graduates are undergoing an internship",
+    "geeks_pro_text_post_number_3": "graduates have completed an internship",
+    "geeks_pro_text_post_number_4": "companies have entered into a partnership agreement with us",
+    "geeks_pro_modal_title": "resume bank",
+    "login": "Login",
+    "password": "Password",
+    "enter": "log in"
 }
