--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,7 @@
         "text_2": "GEEKS JUNIOR",
         "text_3": "GEEKS PRO",
         "text_4": "About Us",
-        "text_5": "Advantages"
+        "text_5": "Sign In"
     },
     "courses": {
         "cours_block_title": "THE MOST POPULAR IT COURSES",
