--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,7 +9,7 @@
         "text_2": "GEEKS JUNIOR",
         "text_3": "GEEKS PRO",
         "text_4": "О нас",
-        "text_5": "ПРЕИМУЩЕСТВА"
+        "text_5": "ВОЙТИ"
     },
     "courses": {
         "cours_block_title": "САМЫЕ ВОСТРЕБОВАННЫЕ IT- КУРСЫ",
